# rpn-calculator

.github/workflows/: c-cpp.yml  ci.yml
include/: rpn.h
latex/: main_8cpp__incl.md5  rpn_8cpp.tex  rpn_8cpp__incl.md5  rpn_8h.tex  rpn_8h__incl.md5  rpn_8h_source.tex
src/: rpn.cpp
tests/: CMakeLists.txt
